# API-CRUD-Django

./: README.md  api_usuarios_dump.sql  pyproject.toml
api_usuarios/: settings.py
usuarios/: models.py  serializers.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_alter_usuario_senha.py
